<resources>
    <string name="app_name">E03 - Layout</string>
    <string name="txt_main">Aula de PA</string>
    <string name="txt_splash">Splash Screen</string>
    <string name="txt_noticia_titulo">Título</string>
    <string name="txt_noticia_subtitulo">Subtítulo</string>
    <string name="txt_noticia_autor">Autor</string>
    <string name="txt_noticia_corpo">Corpo</string>
    <string name="txt_noticia_horario">Horário de postagem</string>
    <string name="txt_noticia_nomecontato">Contato do autor</string>
    <string name="txt_noticia_emailcontato">Email do contato</string>
    <string name="txt_dia1">Dia 1</string>
    <string name="txt_dia2">Dia 2</string>
    <string name="txt_dia3">Dia 3</string>
    <string name="txt_dia4">Dia 4</string>
    <string name="txt_dia5">Dia 5</string>
    <string name="txt_previsao">Previsão</string>
    <string name="txt_hora1">Hora 1</string>
    <string name="txt_hora2">Hora 2</string>
    <string name="txt_hora3">Hora 3</string>
    <string name="txt_hora4">Hora 4</string>
    <string name="txt_hora5">Hora 5</string>
    <string name="txt_hora6">Hora 6</string>
    <string name="txt_horas">Horas</string>
    <string name="txt_graus">ºC</string>
    <string name="txt_detalhes">Detalhes</string>
    <string name="txt_sensacao">Sensação</string>
    <string name="txt_humidade">Humidade</string>
    <string name="txt_visibilidade">Visibilidade</string>
    <string name="txt_indiceuv">Índice UV</string>
    <string name="sbl_humidade">%</string>
    <string name="sbl_visibilidade">mi</string>
    <string name="sbl_indiceuv">Low</string>
    <string name="txt_indice">5d | 10d</string>
    <string name="txt_cidade">Cidade</string>
    <string name="txt_btn">Btn</string>
    <string name="txt_linear_nome">Nome:</string>
    <string name="txt_linear_email">E-mail:</string>
    <string name="txt_linear_comentario">Comentário:</string>
    <string name="txt_linear_nota">Nota:</string>
    <string name="txt_linear_btn">Submeter</string>
    <string name="txt_linear_nota_hint">Entre com um número de 1 a 5</string>
    <string name="txt_btn_formulario_main">clique para ver o formulário</string>
    <string name="txt_btn_noticia_main">clique para ver a notícia</string>
    <string name="txt_btn_previsao_main">clique para ver a previsão do tempo</string>
    <string name="txt_btn_splash_main">clique para ver a splash screen</string>
    <string name="txt_btn_dialog">Enviar comentários</string>
    <string name="txt_hint_edittext_dialog">Digite aqui seus comentários</string>
    <string name="txt_dialog_titulo">Enviar comentários</string>
    <string name="txt_dialog_mensagem">Você realmente deseja enviar os comentários?</string>
    <string name="txt_dialog_btn_positivo">Enviar</string>
    <string name="txt_dialog_btn_negativo">Não enviar</string>
    <string name="txt_dialog_msg_positivo">Comentários enviados com sucesso!</string>
    <string name="txt_dialog_msg_negativo">Comentários NÂO foram enviados!</string>
    <string name="txt_btn_comentarios">clique para ver os comentários</string>
</resources>
